<resources>

    <string name="app_name">WebChart</string>
    <string name="title">Informações do Computador</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_exit">Exit</string>
    <string name="menu_about">About</string>
    <string name="url_summary">url do webService</string>
    <string name="url_title">url</string>
    <string name="porta_summary">Porta do webService</string>
    <string name="porta_title">Porta</string>
    <string name="usuario_summary">Usuario para autenticação HTTP</string>
    <string name="usuario_title">Usuario</string>
    <string name="senha_summary">Senha para autenticação HTTP</string>
    <string name="senha_title">Senha</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_settings">Settings</string>
	<string name="description_chart">Gráfico com informações do computador</string>
	<string name="btnHD">HD</string>
	<string name="btnMEM">Memória</string>
	<string name="btnCPU">Processador</string>
	
</resources>